bugfix(lines): limited the text in the 'Assigned To' column
PROVISION-3114
BEMS523376 - Overlapping error text in phone orders in CCM

--- a/app/modules/huron/lines/_line-list.scss
+++ b/app/modules/huron/lines/_line-list.scss
@@ -41,4 +41,7 @@
 .assignedTo {
   @include vr-spacing(pt, 0.75);
   @include vr-spacing(pl, 1.25);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
